@@ -196,6 +196,8 @@
             <fadetime>600</fadetime>
             <imagepath background="true">$VAR[Global_Background_Image]</imagepath>
             <visible>$EXP[Exp_GlobalBackground]</visible>
+            <animation effect="zoom" start="110" end="130" center="auto" time="10000" tween="sine" easing="inout" pulse="true" condition="Skin.HasSetting(KenBurnsEffect)">Conditional</animation>
+            <animation effect="slide" start="-30,-30" end="30,30" time="6000" tween="sine" easing="inout" pulse="true" condition="Skin.HasSetting(KenBurnsEffect)">Conditional</animation>
         </control>
 
         <control type="image">
