@@ -3,6 +3,7 @@
 - Fix for single PVR info in multiwidget layout
 - Option for numeric star rating
 - Manage art/info menu in dialogvideoinfo
+- Ken burns effect option
 
 0.9.37
 - Add fake landscape icon to Icon Wall view for square icons
